Fixed book links spacing

--- a/index/index.css
+++ b/index/index.css
@@ -8,22 +8,25 @@
     justify-content: space-around;
 }
 
-.home-p{
+.home-p-container{
     max-width: 40%;
-    font-size: 18pt;
-    font-family: 'Open Sans Condensed', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.home-p{
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 18pt;
+}
+
 .book-now-link{
+    font-size: 18pt;
     padding: 15px;
+    margin: 15px;
     background-color: #444;
     color: white;
     display: inline-block;
-    margin-top: 15px;
-    margin-bottom: -25px;
 }
 
 .home-image {
@@ -75,7 +78,7 @@
     .home-section {
         flex-direction: column-reverse;
     }
-    .home-p{
+    .home-p-container{
         max-width: 85%;
         margin-top: 25px;
     }
